@@ -347,7 +347,7 @@ int main(int argc, char *argv[]) {
 
   if(getDevFile(filename, BSIZ, argv[optind])) exit(usage());
 
-  int * cyclic;
+  int * cyclic = NULL;
   if(dopoll) {
     cyclic = getCycle(efreq, mfreq, hfreq, dfreq, sfreq);
     if(!cyclic) { fprintf(stderr,"Malloc failed or divide by zero\n"); exit(-1); }
@@ -406,7 +406,7 @@ int main(int argc, char *argv[]) {
     drainMsgs(filep, rdbuf, MAX_MSG_BYTES, 1, 10); /* Show iceboot msgs */
     int nw = write(filep, DOMAPPSTR, strlen(DOMAPPSTR));
     fprintf(stderr,"Wrote %d bytes.\n", nw);
-    usleep(1000000);
+    usleep(5000000);
     drainMsgs(filep, rdbuf, MAX_MSG_BYTES, 1, 20);
     usleep(3000000);  
   }
@@ -839,7 +839,7 @@ int main(int argc, char *argv[]) {
   close(filep);
   if(savemoni) close(monifd);
   if(savemoni) close(hitsfd);
-  free(cyclic);
+  if(cyclic != NULL) free(cyclic);
 
   getTimes(&tstart, &dtsec, &dtusec, &dt);
   if(hadErr) {
